Update Twitter - Nordstrom.ipynb

--- a/Twitter - Nordstrom.ipynb
+++ b/Twitter - Nordstrom.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Recent events have led to Nordstrom dropping a line of their clothing from their typical lineup - that of Ivanka Trump (http://n.pr/2ktyVqt). As would be expected, this has led to all sorts of reactions from a variety of sources. A Nordstrom spokesperson explained the decision:\n",
     "\n",
-    "    \"Over the past year, and particularly in the last half of 2016, sales of the brand have steadily declined to the point where it didn't make good business sense for us to continue with the line for now. We've had a great relationship with the Ivanka Trump team. We've had open conversations with them over the past year to share what we've seen and Ivanka was personally informed of our decision in early January,\" said the spokesperson.\"\n",
+    "    \"Over the past year, and particularly in the last half of 2016, sales of the brand have steadily declined to the point where it didn't make good business sense for us to continue with the line for now. We've had a great relationship with the Ivanka Trump team. We've had open conversations with them over the past year to share what we've seen and Ivanka was personally informed of our decision in early January\"\n",
     "    \n",
     "The decision by Nordstrom gained public attention on Feb 3rd and 4th. The president responded publicly (on Twitter) to the decision by Nordstrom on the morning of February 8:\n",
     "\n",
