Update Twitter - Nordstrom.ipynb

--- a/Twitter - Nordstrom.ipynb
+++ b/Twitter - Nordstrom.ipynb
@@ -718,7 +718,8 @@
     "2. Combine Twitter analysis with in-store and online purchasing data \n",
     "3. Dive deeper into tweet analysis with NLP fuzzy matching of phrases\n",
     "4. Pick a sample of tweets to analyze more in-depth where negativity is aimed\n",
-    "5. Combine Twitter analysis with other relevant retail information\n"
+    "5. Combine Twitter analysis with other relevant retail information\n",
+    "6. See if there is a way to classify sarcasm, which could be mis-classified by sentiment analysis\n"
    ]
   },
   {
