Update Twitter - Nordstrom.ipynb

--- a/Twitter - Nordstrom.ipynb
+++ b/Twitter - Nordstrom.ipynb
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All right, now let's look at the content of these tweets a bit more closely. I use what is essentially a \"sentiment dictionary\". This is afinn, which scores each words based on their positivity or negativity. More information can be found at https://github.com/wooorm/afinn-111.\n",
+    "All right, now let's look at the content of these tweets a bit more closely. I use what is essentially a \"sentiment dictionary\". This is afinn, which scores each words based on their positivity (positive number) or negativity (negative number). More information can be found at https://github.com/wooorm/afinn-111.\n",
     "\n",
     "Obviously, we have to realize this is inexact, but it is unreasonable to examine and score the sentiment of each tweet individually and sentiment analysis is a more and more common approach to analyzing how humans react (whether on Twitter, other social media, online reviews of products, restaurants, etc....)."
    ]
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, we use the list of afinn words to assign a sentiment score to the tweets. We split this up based again on whether Nordstrom is mentioned in isolation or not. We can examine the spread of sentiments, as below:"
+    "So, we use the list of afinn words to assign a sentiment score to the tweets. The more positive, the greater positive number assigned; likewise, more negative means a greater negative number. Not all words are weighted equally, with stronger sentiments contributing more. We split this up based again on whether Nordstrom is mentioned in isolation or not. We can examine the spread of sentiments, as below:"
    ]
   },
   {
